# SysProgramming

./: 0002-fix-truncation-error.patch  calculator.h  myChanges.txt
make/: CMakeLists.txt  Makefile  main.cpp
ninja/: build.ninja  rules.ninja
